@@ -13,6 +13,11 @@ changes' is much more useful than 'misc edits' or 'code cleanup.'
 small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
+
+Expose 'Map.InsertAround' to Python.
+Nicolas Weeger 2010-05-29
+
+
 Remove unused "oldmessage" parameter from draw_ext_info, draw_ext_info_format,
   ext_info_map, ext_info_map_except, and ext_info_map_except2 functions and
   calls.
